--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -46,7 +46,7 @@
         /*}*/
     </style>
 </head>
-<body>
+<body [style.backgroundImage]="(snow) ? 'url(../../public/img/mountains-new-year-2020.png)': 'url(../../public/img/mountains.png)'">
 <!--<div class="header">-->
     <!--<div class="container">-->
         <!--<ul>-->
