--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -46,7 +46,8 @@
         /*}*/
     </style>
 </head>
-<body [style.backgroundImage]="(snow) ? 'url(../../public/img/mountains-new-year-2020.png)': 'url(../../public/img/mountains.png)'">
+<body>
+<!--<body [style.backgroundImage]="(snow) ? 'url(../../public/img/mountains-new-year-2020.png)': 'url(../../public/img/mountains.png)'">-->
 <!--<div class="header">-->
     <!--<div class="container">-->
         <!--<ul>-->
@@ -387,8 +388,8 @@
                     </div>
                     <div class="menu_header__row" style="min-height: 88px">
                         <a [routerLink]="[getHomePageURLByType(activeBlock)]" title="NICNBK" class="menu_logo menu_header__logo -active" (click)="activeMenu = 'NEWS'">NICNBK</a>
-                        <img *ngIf="showSnow()" src="../../public/img/happy-new-year-2020.gif" alt="Happy New Year" style="width:65px;height:88px;">
-                        <img *ngIf="showSnow()" src="../../public/img/happy-new-year-2020.gif" alt="Happy New Year" style="width:154px;height:88px;">
+                        <img *ngIf="showSnow()" src="../../public/img/happy-new-year-2020.png" alt="Happy New Year" style="width:65px;height:88px;">
+                        <img *ngIf="showSnow()" src="../../public/img/happy-new-year-2020.png" alt="Happy New Year" style="width:160px;height:88px;">
                         <nav class="menu_navigation">
                         <ul class="navigation__menu" style="background-color: white">
                             <li class="navigation__item dropdown">&nbsp;</li>
