--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
@@ -373,7 +373,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row withpadding" *ngIf="fundListType == 1">
+                    <div class="row withpadding" *ngIf="fundListType == 1 || fundListType == 2">
                         <button class="btn btn-primary pull-right" (click)="exportFundList()">Export</button>
                         <span class="pull-right">&nbsp;</span>
                     </div>
@@ -401,13 +401,16 @@
                                     <th>FUND NAME</th>
                                     <th>INVESTMENT MANAGER</th>
                                     <th>MAIN STRATEGY</th>
-                                    <th>Ann RoR</th>
-                                    <th>Sortino</th>
-                                    <th>Beta</th>
-                                    <th>CF Var 99</th>
-                                    <th>Alpha</th>
-                                    <th>Omega</th>
-                                    <th style="background-color: #f9eaea">Total</th>
+<!--                                    <th *ngIf="fundListType == 2">Strategy AUM Check</th>-->
+<!--                                    <th *ngIf="fundListType == 2">Manager AUM Check</th>-->
+<!--                                    <th *ngIf="fundListType == 2">Track Record Check</th>-->
+                                    <th *ngIf="fundListType == 1">Ann RoR</th>
+                                    <th *ngIf="fundListType == 1">Sortino</th>
+                                    <th *ngIf="fundListType == 1">Beta</th>
+                                    <th *ngIf="fundListType == 1">CF Var 99</th>
+                                    <th *ngIf="fundListType == 1">Alpha</th>
+                                    <th *ngIf="fundListType == 1">Omega</th>
+                                    <th  *ngIf="fundListType == 1" style="background-color: #f9eaea">Total</th>
                                     <th colspan="2">FUND AUM</th>
                                     <!--<th>CURRENCY/AUM</th>-->
                                     <th>STRATEGY AUM,$</th>
@@ -420,7 +423,6 @@
                                     <!--<th *ngIf="showParameterMatching">TRACK RECORD</th>-->
                                 </tr>
                                 </thead>
-
                                 <tbody>
                                 <tr *ngFor = "let fund of filteredFundList; let i=index" id="{{fund.fundId}}">
                                     <td>{{i + 1}}</td>
@@ -428,38 +430,51 @@
                                     <td><span [style.text-decoration]="fund.excluded ? 'line-through' : ''">{{fund.fundName}}</span> <span *ngIf="fund.added">*</span></td>
                                     <td>{{fund.investmentManager}}</td>
                                     <td>{{fund.mainStrategy}}</td>
-                                    <td>{{fund.annualizedReturn | percent:'1.2-2'}}</td>
-                                    <td>{{fund.sortino | number:'1.2-2' }}</td>
-                                    <td>{{(fund.beta | number:'1.1-1') == 0.0 ? (fund.beta > 0 ? 0.1 : -0.1) : (fund.beta | number:'1.1-1')}}</td>
-                                    <td>{{fund.cfVar| percent:'1.2-2'}}</td>
-                                    <td>{{fund.alpha| percent:'1.2-2'}}</td>
-                                    <td>{{fund.omega| number:'1.2-2'}}</td>
-                                    <td style="background-color: #f9eaea">{{fund.totalScore| number:'1.2-2'}}</td>
+<!--                                    <td *ngIf="fundListType == 2">-->
+<!--                                        <span style="color:green" *ngIf="fund.strategyAUMCheck" class="glyphicon glyphicon-ok"></span>-->
+<!--                                        <span style="color:red" *ngIf="!fund.strategyAUMCheck" class="glyphicon glyphicon-remove"></span>-->
+<!--                                    </td>-->
+<!--                                    <td *ngIf="fundListType == 2">-->
+<!--                                        <span style="color:green"  *ngIf="fund.managerAUMCheck" class="glyphicon glyphicon-ok"></span>-->
+<!--                                        <span style="color:red" *ngIf="!fund.managerAUMCheck" class="glyphicon glyphicon-remove"></span>-->
+<!--                                    </td>-->
+<!--                                    <td *ngIf="fundListType == 2">-->
+<!--                                        <span style="color:green"  *ngIf="fund.trackRecordCheck" class="glyphicon glyphicon-ok"></span>-->
+<!--                                        <span style="color:red" *ngIf="!fund.trackRecordCheck" class="glyphicon glyphicon-remove"></span>-->
+<!--                                    </td>-->
+                                    <td *ngIf="fundListType == 1">{{fund.annualizedReturn | percent:'1.2-2'}}</td>
+                                    <td *ngIf="fundListType == 1">{{fund.sortino | number:'1.2-2' }}</td>
+                                    <td *ngIf="fundListType == 1">{{(fund.beta | number:'1.1-1') == 0.0 ? (fund.beta > 0 ? 0.1 : -0.1) : (fund.beta | number:'1.1-1')}}</td>
+                                    <td *ngIf="fundListType == 1">{{fund.cfVar| percent:'1.2-2'}}</td>
+                                    <td *ngIf="fundListType == 1">{{fund.alpha| percent:'1.2-2'}}</td>
+                                    <td *ngIf="fundListType == 1">{{fund.omega| number:'1.2-2'}}</td>
+                                    <td  *ngIf="fundListType == 1" style="background-color: #f9eaea">{{fund.totalScore| number:'1.2-2'}}</td>
                                     <td align="center">
+                                        <span style="color:green" *ngIf="fund.strategyAUMCheck" class="glyphicon glyphicon-ok"></span>
+                                        <span style="color:red" *ngIf="!fund.strategyAUMCheck" class="glyphicon glyphicon-remove"></span>
+                                        <br/>
                                         <span *ngIf="fund.fundAUM != null" [style.text-decoration]="fund.editedFundAUM != null ? 'line-through' : ''" data-toggle="tooltip"
-                                                     data-placement="top" title="{{fund.fundAUM}}" [style.color]="checkFundAUM(fund.fundAUM) ? 'black' : 'red'">
+                                                     data-placement="top" title="{{fund.fundAUM}}">
                                             ${{getAmountShort(fund.fundAUM)}}
                                             <span class="glyphicon glyphicon-calendar"
                                                   *ngIf="fund?.fundAUMDate != null"
                                                   data-toggle="tooltip" data-placement="top" title="{{fund.fundAUMDate}}">
                                             </span>
                                         </span>
-                                        &nbsp;
-                                        &nbsp;
-                                        <span *ngIf="fund.editedFundAUM != null" data-placement="top" [style.border]="'1px solid black'" title="{{fund.editedFundAUM}}" [style.color]="checkFundAUM(fund.editedFundAUM) ? 'black' : 'red'">
+                                        <span *ngIf="fund.editedFundAUM != null" data-placement="top" [style.border]="'1px solid black'" title="{{fund.editedFundAUM}}" >
                                             ${{getAmountShort(fund.editedFundAUM)}}
                                             <span class="glyphicon glyphicon-calendar"
                                                   *ngIf="fund?.editedFundAUMDate != null"
                                                   data-toggle="tooltip" data-placement="top" title="{{fund.editedFundAUMDate}}">
                                             </span>
                                         </span>
-                                        <span *ngIf="fund.fundAUM == null && fund.recentFundAUM != null" style="color: red">
+                                        <span *ngIf="fund.fundAUM == null && fund.recentFundAUM != null">
                                             $ {{getAmountShort(fund.recentFundAUM)}} {{(fund.recentFundAUMDate != null ? "(" + getReportDateShortFormatted(fund.recentFundAUMDate) + ")" : '')}}
                                         </span>
                                         <!--<span *ngIf="fund.fundAUM == null && fund.recentFundAUM == null" style="color:red">-</span>-->
                                     </td>
                                     <td>
-                                        <span *ngIf="fund.currency != null && fund.currency != 'USD'" [style.color]="fundAUMByCurrency != null ? 'black' : 'red'">
+                                        <span *ngIf="fund.currency != null && fund.currency != 'USD'"> <!--[style.color]="fundAUMByCurrency != null ? 'black' : 'red'">-->
                                             {{fund.currency + ' ' + getAmountShort(fund.fundAUMByCurrency)}}
                                         </span>
                                         <span class="glyphicon glyphicon-calendar"
@@ -474,11 +489,14 @@
                                     </td>
                                     <td align="center">
                                         <!--<div *ngIf="fund?.differentManagerCurrencies == null || !fund?.differentManagerCurrencies">-->
-                                            <span *ngIf="fund?.strategyAUM != null" [style.color]="checkStrategyAUM(fund.strategyAUM) ? 'black' : 'red'">
+                                        <span style="color:green" *ngIf="fund.strategyAUMCheck" class="glyphicon glyphicon-ok"></span>
+                                        <span style="color:red" *ngIf="!fund.strategyAUMCheck" class="glyphicon glyphicon-remove"></span>
+                                        &nbsp;&nbsp;
+                                            <span *ngIf="fund?.strategyAUM != null">
                                                 {{getAmountShort(fund.strategyAUM)}}
                                             </span>
 
-                                            <span *ngIf="fund.strategyAUM == null && fund.recentStrategyAUM != null" style="color: red">
+                                            <span *ngIf="fund.strategyAUM == null && fund.recentStrategyAUM != null">
                                                 {{getAmountShort(fund.recentStrategyAUM)}} {{(fund.recentStrategyAUMDate != null ? "( from " + getReportDateShortFormatted(fund.recentStrategyAUMDate) + ")" : '')}}
                                             </span>
 
@@ -495,8 +513,11 @@
                                             <!--<span style="color: red">Different currency funds for manager</span>-->
                                         <!--</div>-->
                                     </td>
-                                    <td *ngIf="!fund.editing" [style.color]="checkManagerAUM(fund) ? 'black' : 'red'">
-                                        {{fund.managerAUM != null ? getAmountShort(fund.managerAUM) : '--'}} &nbsp;
+                                    <td *ngIf="!fund.editing">
+                                        <span style="color:green" *ngIf="fund.managerAUMCheck" class="glyphicon glyphicon-ok"></span>
+                                        <span style="color:red" *ngIf="!fund.managerAUMCheck" class="glyphicon glyphicon-remove"></span>
+                                        &nbsp;&nbsp;
+                                        {{fund.managerAUM != null ? getAmountShort(fund.managerAUM) : 'N/A'}} &nbsp;
                                         <!--<span (click)="editFundManagerAUM(fund)" style="color: black">-->
                                             <!--<span class="glyphicon glyphicon-pencil"></span>-->
                                         <!--</span>-->
@@ -510,7 +531,9 @@
                                             <!--</span>-->
                                         <!--</div>-->
                                     </td>
-                                    <td *ngIf="isUnqualifiedFundList" [style.color]="fund.recentTrackRecordDateWithinLookback ? 'black' : 'red'">
+                                    <td *ngIf="isUnqualifiedFundList">
+                                        <span style="color:green" *ngIf="fund.trackRecordCheck" class="glyphicon glyphicon-ok"></span>
+                                        <span style="color:red" *ngIf="!fund.trackRecordCheck" class="glyphicon glyphicon-remove"></span>
                                         {{getReportDateShortFormatted(fund.recentTrackRecordDate) }}
                                     </td>
 
@@ -523,7 +546,7 @@
                                 </td>
                                 <td>
                                     <span style="color: black" data-toggle="modal" (click)="openExcludeFund(fund, 'FUNDLIST')" data-target="#excludeFundModal">
-                                            <span class="glyphicon glyphicon-remove"></span>
+                                            <span class="glyphicon glyphicon-trash"></span>
                                     </span>
                                 </td>
 <!--                                    <td *ngIf="showParameterMatching" style="background-color: #2e6da4">+</td>
