--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -1,6 +1,14 @@
 <div class="container">
     <div class="row top-buffer">
         <div class="col-md-12">
+            <ol class="breadcrumb">
+                <li *ngIf="this.breadcrumbParams != null">
+                    <span><a [routerLink]="[this.breadcrumbParamsPath, {params: this.breadcrumbParams }]">EMPLOYEES</a></span>
+                </li>
+                <li class="active">PROFILE</li>
+            </ol>
+        </div>
+        <div class="col-md-12">
             <div class="alert alert-danger" *ngIf="errorMessage != null"><span>{{errorMessage}}</span>
             </div>
             <div class="alert alert-info" *ngIf="successMessage != null"><span>{{successMessage}}</span>
@@ -8,4 +16,70 @@
         </div>
     </div>
     <br/>
+    <h4>Profile Information</h4>
+    <div class="col-md-3 col-lg-3 " align="center">
+        <img alt="User Pic" src="../../../../public/img/noprofile.png" class="img-circle img-responsive">
+    </div>
+    <div class=" col-md-9 col-lg-9 ">
+        <div class="row form-group">
+            <label class="control-label col-sm-2">Username:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" [(ngModel)]="employee.username" [disabled]="true" />
+            </div>
+        </div>
+        <div class="row form-group">
+            <label class="control-label col-sm-2">Last name:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" [(ngModel)]="employee.lastName"/>
+            </div>
+        </div>
+        <div class="row form-group">
+            <label class="control-label col-sm-2">First name:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" [(ngModel)]="employee.firstName"/>
+            </div>
+        </div>
+        <div class="row form-group">
+            <label class="control-label col-sm-2">Patronymic:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" [(ngModel)]="employee.patronymic"/>
+            </div>
+        </div>
+        <div class="row form-group">
+            <label class="control-label col-sm-2">Date of birth:</label>
+            <div class="col-sm-3">
+                <div class='input-group date col-md-2' id='birthDatePicker' style="width: 100%">
+                    <input type="text" class="form-control" id="birthDate" name="birthDate" style="font-size: small" [(ngModel)]="employee.birthDate"/>
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="row form-group">
+            <label class="control-label col-sm-2">Position:</label>
+            <div class="col-sm-5">
+                <select id="department" class="form-control" name="department" [(ngModel)]="chosenDepartment"
+                        (change)="departmentChanged($event.target.value)">
+                    <option *ngFor = "let department of departments" [value]="department?.code">{{department?.nameEn}}</option>
+                </select>
+            </div>
+            <div class="col-sm-5">
+                <select [disabled] = "chosenDepartment == null" id="position" class="form-control" name="position" [(ngModel)]="chosenPosition">
+                    <option *ngFor = "let position of departmentPositions" [value]="position?.code">{{position?.nameEn}}</option>
+                </select>
+            </div>
+        </div>
+        <div class="row form-group">
+            <label class="control-label col-sm-2">Status:</label>
+            <div class="col-sm-10">
+                <button *ngIf="employee.active == null || employee.active" class="btn btn-xs btn-success" (click)="employee.active = false">ACTIVE</button>
+                <button *ngIf="employee.active != null && !employee.active" class="btn btn-xs btn-default" (click)="employee.active = true">IN-ACTIVE</button>
+            </div>
+        </div>
+        <br/>
+        <div class="row form-group pull-right">
+            <button class="btn btn-success" (click)="saveEmployeeProfile()">Save</button>
+        </div>
+    </div>
 </div>
