--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -22,19 +22,19 @@
     </div>
     <div class=" col-md-9 col-lg-9 ">
         <div class="row form-group">
-            <label class="control-label col-sm-2">Username:</label>
+            <label class="control-label col-sm-2">Username*:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" [(ngModel)]="employee.username" [disabled]="this.employee.id != null" />
             </div>
         </div>
         <div class="row form-group">
-            <label class="control-label col-sm-2">Last name:</label>
+            <label class="control-label col-sm-2">Last name*:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" [(ngModel)]="employee.lastName"/>
             </div>
         </div>
         <div class="row form-group">
-            <label class="control-label col-sm-2">First name:</label>
+            <label class="control-label col-sm-2">First name*:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" [(ngModel)]="employee.firstName"/>
             </div>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="row form-group">
-            <label class="control-label col-sm-2">Date of birth:</label>
+            <label class="control-label col-sm-2">Date of birth*:</label>
             <div class="col-sm-3">
                 <div class='input-group date col-md-2' id='birthDatePicker' style="width: 100%">
                     <input type="text" class="form-control" id="birthDate" name="birthDate" style="font-size: small" [(ngModel)]="employee.birthDate"/>
@@ -77,6 +77,7 @@
                 <button *ngIf="employee.active != null && !employee.active" class="btn btn-xs btn-default" (click)="employee.active = true">IN-ACTIVE</button>
             </div>
         </div>
+        <hr style="border-top: 1px solid #B5AEAE"/>
         <div class="row form-group">
             <label class="control-label col-sm-2">Password:</label>
             <div class="col-sm-4">
@@ -87,6 +88,13 @@
                 <input type="password" class="form-control" [(ngModel)]="newPasswordConfirm"/>
             </div>
         </div>
+        <div class="row form-group">
+            <label class="control-label col-sm-2"></label>
+            <div class="col-sm-4">
+                <button class="btn btn-xs btn-default" (click)="newPassword = 'Qwerty123'; newPasswordConfirm = 'Qwerty123'">Use 'Qwerty123'</button>
+            </div>
+        </div>
+        <hr style="border-top: 1px solid #B5AEAE"/>
         <div class="row form-group">
             <label class="control-label col-sm-2">Roles:</label>
             <div class="col-sm-10 horizontal">
