--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -24,19 +24,22 @@
         <div class="row form-group">
             <label class="control-label col-sm-2">Username*:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" [(ngModel)]="employee.username" [disabled]="this.employee.id != null" />
+                <input type="text" class="form-control" [(ngModel)]="employee.username" required #userName="ngModel" [disabled]="this.employee.id != null"/>
+                <div [hidden]="userName.valid || userName.pristine" class="alert alert-danger col-md-3">Enter username</div>
             </div>
         </div>
         <div class="row form-group">
             <label class="control-label col-sm-2">Last name*:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" [(ngModel)]="employee.lastName"/>
+                <input type="text" class="form-control" [(ngModel)]="employee.lastName" required #lastName="ngModel"/>
+                <div [hidden]="lastName.valid || lastName.pristine" class="alert alert-danger col-md-3">Enter last name</div>
             </div>
         </div>
         <div class="row form-group">
             <label class="control-label col-sm-2">First name*:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" [(ngModel)]="employee.firstName"/>
+                <input type="text" class="form-control" [(ngModel)]="employee.firstName" required #firstName="ngModel"/>
+                <div [hidden]="firstName.valid || firstName.pristine" class="alert alert-danger col-md-3">Enter first name</div>
             </div>
         </div>
         <div class="row form-group">
@@ -49,12 +52,13 @@
             <label class="control-label col-sm-2">Date of birth*:</label>
             <div class="col-sm-3">
                 <div class='input-group date col-md-2' id='birthDatePicker' style="width: 100%">
-                    <input type="text" class="form-control" id="birthDate" name="birthDate" style="font-size: small" [(ngModel)]="employee.birthDate"/>
+                    <input type="text" class="form-control" id="birthDate" name="birthDate" style="font-size: small" [(ngModel)]="employee.birthDate" required #birthDate="ngModel"/>
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
                 </div>
             </div>
+            <div [hidden]="birthDate.valid || birthDate.pristine" class="alert alert-danger col-md-3">Enter date of birth3</div>
         </div>
         <div class="row form-group">
             <label class="control-label col-sm-2">Position:</label>
