--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-
     <div class="row top-buffer" >
         <div class="col-md-12">
             <ol class="breadcrumb">
@@ -12,7 +11,6 @@
             </ol>
         </div>
     </div>
-
     <div class="row">
         <div class="row top-buffer" >
             <div class="col-md-12">
@@ -27,13 +25,10 @@
             </div>
         </div>
     </div>
-
     <div class="row withpadding">
         <a [routerLink]="['/hf/screening/filteredResults/edit/', screeningId, 0 ]" class="btn btn-primary pull-right">NEW</a>
     </div>
     <br/>
-
-
     <div class="row withpadding" style="position: relative; min-height: 80px;">
         <!--<div class="row pull-right">-->
             <!--<ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">-->
@@ -54,6 +49,7 @@
                 <th>LOOKBACK RETURN</th>
                 <th>LOOKBACK AUM</th>
                 <th>START DATE</th>
+                <th>&nbsp;</th>
             </tr>
             </thead>
 
@@ -62,11 +58,17 @@
             <tr *ngFor = "let record of records" style="cursor: pointer">
                 <!--<td width="5%"></td>-->
                 <td (click)="navigate(record.id)">{{getAmountShort(record.fundAUM)}}</td>
-                <td width="30%"(click)="navigate(record.id)">{{getAmountShort(record.managerAUM)}}</td>
-                <td width="30%" (click)="navigate(record.id)">{{record.trackRecord}}</td>
-                <td width="10%" (click)="navigate(record.id)">{{record.lookbackReturns}}</td>
-                <td width="10%" (click)="navigate(record.id)">{{record.lookbackAUM}}</td>
-                <td width="10%" (click)="navigate(record.id)">{{record.startDate}}</td>
+                <td (click)="navigate(record.id)">{{getAmountShort(record.managerAUM)}}</td>
+                <td (click)="navigate(record.id)">{{record.trackRecord}}</td>
+                <td (click)="navigate(record.id)">{{record.lookbackReturns}}</td>
+                <td (click)="navigate(record.id)">{{record.lookbackAUM}}</td>
+                <td (click)="navigate(record.id)">{{record.startDate}}</td>
+                <td>
+                    &nbsp;<span *ngIf="!record.editable" class="glyphicon glyphicon-lock" style="color: green" (click)="navigate(record.id)"></span>
+                    <button *ngIf="record.editable" class="btn btn-danger btn-xs" (click)="deleteFilteredResult(record.id)">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </button>
+                </td>
                 <!--<td width="5%">-->
                     <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
                 <!--</td>-->
